@@ -1,10 +1,9 @@
-# Copyright 1999-2016 Gentoo Foundation
+# Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
 
 EAPI=5
 
-PYTHON_COMPAT=( python3_3 python3_4 )
+PYTHON_COMPAT=( python3_4 python3_5 python3_6 )
 
 inherit git-2 python-r1
 
@@ -20,7 +19,7 @@ IUSE=""
 
 DEPEND="${PYTHON_DEPS}"
 RDEPEND="${DEPEND}
-	app-portage/gentoolkit-dev
+	>=app-portage/gentoolkit-0.4.0
 	>=www-client/pybugz-0.10[${PYTHON_USEDEP}]"
 
 REQUIRED_USE="${PYTHON_REQUIRED_USE}"
