@@ -1,3 +1,7 @@
+  03 Apr 2017; Agostino Sarubbo <ago@gentoo.org> arch-tools-9999.ebuild:
+  app-portage/arch-tools: add gentoolkit as RDEPEND and add python3_5 support,
+  wrt bug #614568
+
   04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> arch-tools-9999.ebuild:
   app-portage/arch-tools: update HOMEPAGE/EGIT_REPO_URI
 
